swagger-ui/03-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    service: swagger-editor
  name: swagger-editor
  namespace: swagger-editor
spec:
  ports:
    - name: "8080"
      port: 8080
      targetPort: 8080
      protocol: TCP
  selector:
    service: swagger-editor
