swagger-ui/04-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: swagger-editor
  namespace: swagger-editor
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/proxy-body-size: "100M"
spec:
  ingressClassName: nginx
  rules:
  - host: ${DOMAIN}
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: swagger-editor
            port:
              number: 8080
  tls:
  - hosts:
    - ${DOMAIN}
    secretName: ${CERTIFICATE_SECRET_NAME}
